--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:create": "npx typeorm-ts-node-commonjs migration:create",
+    "migration:show": "npx typeorm-ts-node-commonjs migration:show -d src/config/migration.config.ts",
+    "migration:generate": "npx typeorm-ts-node-commonjs migration:generate -d src/config/migration.config.ts",
+    "migration:up": "npx typeorm-ts-node-commonjs migration:run -d src/config/migration.config.ts",
+    "migration:down": "npx typeorm-ts-node-commonjs migration:revert -d src/config/migration.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -25,6 +30,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "dotenv": "^16.3.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
